--- a/hw1.html
+++ b/hw1.html
@@ -9,7 +9,15 @@
                initial-scale=1 設定初始值是100%
                user-scala;;;ble=no 代表不能讓使用者改變縮放比例-->
           <title>ShaoxianYu HW1</title>
-          
+          <!-- Global site tag (gtag.js) - Google Analytics -->
+               <script async src="https://www.googletagmanager.com/gtag/js?id=G-85P2SHMVNR"></script>
+               <script>
+               window.dataLayer = window.dataLayer || [];
+               function gtag(){dataLayer.push(arguments);}
+               gtag('js', new Date());
+
+               gtag('config', 'G-85P2SHMVNR');
+               </script>
           <meta name="description" content= "ShaoxianYu bio"/>
           
           <link href="style.css" rel="stylesheet" type="text/css" media="all"/>
