--- a/hw1.html
+++ b/hw1.html
@@ -16,7 +16,7 @@
                function gtag(){dataLayer.push(arguments);}
                gtag('js', new Date());
 
-               gtag('config', 'G-85P2SHMVNR');
+               gtag('config', 'G-9N5TJ3WMB6');
                </script>
           <meta name="description" content= "ShaoxianYu bio"/>
           
