--- a/hw1.html
+++ b/hw1.html
@@ -11,13 +11,13 @@
           <title>ShaoxianYu HW1</title> 
           
                <!-- Global site tag (gtag.js) - Google Analytics -->
-               <script async src="https://www.googletagmanager.com/gtag/js?id=G-85P2SHMVNR"></script>
+               <script async src="https://www.googletagmanager.com/gtag/js?id=G-9N5TJ3WMB6"></script>
                <script>
                window.dataLayer = window.dataLayer || [];
                function gtag(){dataLayer.push(arguments);}
                gtag('js', new Date());
 
-               gtag('config', 'G-85P2SHMVNR');
+               gtag('config', 'G-9N5TJ3WMB6');
                </script>
           <meta name="description" content= "ShaoxianYu bio"/>
           <link href="style.css" rel="stylesheet" type="text/css" media="all"/>
