--- a/hw1.html
+++ b/hw1.html
@@ -11,7 +11,7 @@
           <title>ShaoxianYu HW1</title> 
           
                <!-- Global site tag (gtag.js) - Google Analytics -->
-               <script async src="https://www.googletagmanager.com/gtag/js?id=G-9N5TJ3WMB6"></script>
+               <script async src="https://www.googletagmanager.com/gtag/js?id=G-85P2SHMVNR"></script>
                <script>
                window.dataLayer = window.dataLayer || [];
                function gtag(){dataLayer.push(arguments);}
